fix: layout behind aside menu

--- a/client/src/app/(main)/layout.module.scss
+++ b/client/src/app/(main)/layout.module.scss
@@ -1,8 +1,17 @@
 .container {
   height: 100dvh;
   width: 100%;
-  padding: 48px 55px;
+  
+  display: flex;
+}
 
+.children {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  padding: 48px 55px;
   @media (width <= 1120px) {
     padding: 48px 24px;
   }
@@ -12,11 +21,6 @@
   }
 }
 
-.children {
-  width: 100%;
-  min-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.placeholder {
+  width: 93px;
 }
