--- a/client/src/app/(main)/profile/layout.module.scss
+++ b/client/src/app/(main)/profile/layout.module.scss
@@ -2,6 +2,7 @@
 .container {
   display: flex;
   width: 100%;
+  height: 100%;
 
   .body {
     width: 100%;
